src/test/deca/codegen/valid/avecObjet/down_cast.deca
// Description :
//    Test de Downcast pour forcer needRuntimeCheck à true.
//
// Resultats :
//    ok

class A {}
class B extends A {}

{
    A a = new B();
    B b;
    b = (B)(a);
    println("ok");
}